# oidc-cli

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
