[package]
name = "oidc-cli"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
url = "2.4"
webbrowser = "0.8"
aws-config = "1.5"
aws-sdk-sts = "1.49"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
jsonwebtoken = "9.1"
