[package]
name = "oidc-cli"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.5"
aws-sdk-sts = "1.49"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.41", features = ["full"] }
url = "2.5"
webbrowser = "1.0"